[package]
name = "kiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.195"
serde_json = "1.0.111"
xcap = "0.0.1"
base64 = "0.21.7"
image = "0.24.8"
